--- a/app/src/main/res/layout/activity_crud_alumno.xml
+++ b/app/src/main/res/layout/activity_crud_alumno.xml
@@ -253,6 +253,7 @@
                         android:layout_height="48dp"
                         android:layout_marginEnd="6dp"
                         android:layout_weight="1"
+                        android:onClick="curdback"
                         android:text="Volver"
                         android:textColor="#FFFFFF"
                         android:textSize="13sp"
